[package]
name = "drizzle-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true
doctest = true

[dependencies]
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }
rand = { workspace = true }
heck = { version = "0.5" }
pluralizer = { version = "0.5" }
proc-macro-crate = "3.4"
paste = { workspace = true }
# Migration types for metadata generation
drizzle-migrations = { workspace = true }
# Shared type definitions
drizzle-types = { workspace = true, features = ["std"] }
drizzle-core = { workspace = true, default-features = true, optional = true }
drizzle-sqlite = { workspace = true, default-features = true, optional = true }
drizzle-postgres = { workspace = true, default-features = true, optional = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
rusqlite = { workspace = true, optional = true, features = ["uuid"] }
libsql = { workspace = true, optional = true }
turso = { workspace = true, optional = true }

[dev-dependencies]
drizzle-core = { workspace = true, default-features = true }
drizzle-sqlite = { workspace = true, default-features = true }
drizzle-postgres = { workspace = true, default-features = true }
uuid = { workspace = true }
const_format = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = []
serde = []
sqlite = ["dep:drizzle-core", "dep:drizzle-sqlite"]
postgres = ["dep:drizzle-core", "dep:drizzle-postgres"]
mysql = []
uuid = ["drizzle-core/uuid", "drizzle-sqlite/uuid", "drizzle-postgres/uuid"]
arrayvec = []
# PostgreSQL optional type features
chrono = []
time = []
cidr = []
geo-types = []
bit-vec = []
compact-str = []
bytes = []
smallvec = []
rusqlite = ["sqlite", "dep:rusqlite", "drizzle-core/rusqlite", "drizzle-sqlite/rusqlite"]
libsql = ["sqlite", "dep:libsql", "drizzle-core/libsql", "drizzle-sqlite/libsql"]
turso = ["sqlite", "dep:turso", "drizzle-core/turso", "drizzle-sqlite/turso"]
# PostgreSQL driver-specific features
postgres-sync = ["postgres", "drizzle-core/postgres-sync", "drizzle-postgres/postgres-sync"]
tokio-postgres = ["postgres", "drizzle-core/tokio-postgres", "drizzle-postgres/tokio-postgres"]
# Relational query API code generation
query = []

