[package]
name = "drizzle-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true
doctest = true

[dependencies]
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }
rand = { workspace = true }
heck = { version = "0.5" }
pluralizer = { version = "0.5" }
proc-macro-crate = "3.4"
paste = { workspace = true }
# Migration types for metadata generation
drizzle-migrations = { workspace = true }
# Shared type definitions
drizzle-types = { workspace = true, features = ["std"] }
drizzle-core = { workspace = true, default-features = true, optional = true }
drizzle-sqlite = { workspace = true, default-features = true, optional = true }
drizzle-postgres = { workspace = true, default-features = true, optional = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
rusqlite = { workspace = true, optional = true, features = ["uuid"] }
libsql = { workspace = true, optional = true }
turso = { workspace = true, optional = true }
postgres = { workspace = true, optional = true }
tokio-postgres = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

[dev-dependencies]
drizzle-core = { workspace = true, default-features = true }
drizzle-sqlite = { workspace = true, default-features = true }
drizzle-postgres = { workspace = true, default-features = true }
uuid = { workspace = true }
const_format = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = []
serde = ["drizzle-core/serde", "drizzle-sqlite/serde", "drizzle-postgres/serde"]
sqlite = ["dep:drizzle-core", "dep:drizzle-sqlite"]
postgres = ["dep:drizzle-core", "dep:drizzle-postgres"]
mysql = []
uuid = ["drizzle-core/uuid", "drizzle-sqlite/uuid", "drizzle-postgres/uuid"]
arrayvec = ["drizzle-core/arrayvec"]
# PostgreSQL optional type features
chrono = ["drizzle-core/chrono", "drizzle-sqlite/chrono", "drizzle-postgres/chrono"]
time = ["drizzle-core/time", "drizzle-sqlite/time", "drizzle-postgres/time"]
cidr = ["drizzle-core/cidr", "drizzle-postgres/cidr"]
geo-types = ["drizzle-core/geo-types", "drizzle-postgres/geo-types"]
bit-vec = ["drizzle-core/bit-vec", "drizzle-postgres/bit-vec"]
compact-str = ["drizzle-core/compact-str", "drizzle-postgres/compact-str"]
bytes = [
    "dep:bytes",
    "drizzle-core/bytes",
    "drizzle-sqlite/bytes",
    "drizzle-postgres/bytes",
]
smallvec = ["drizzle-core/smallvec-types", "drizzle-sqlite/smallvec", "drizzle-postgres/smallvec"]
rusqlite = ["sqlite", "dep:rusqlite", "drizzle-core/rusqlite", "drizzle-sqlite/rusqlite"]
libsql = ["sqlite", "dep:libsql", "drizzle-core/libsql", "drizzle-sqlite/libsql"]
turso = ["sqlite", "dep:turso", "drizzle-core/turso", "drizzle-sqlite/turso"]
# PostgreSQL driver-specific features
postgres-sync = [
    "postgres",
    "dep:postgres",
    "dep:bytes",
    "drizzle-core/postgres-sync",
    "drizzle-postgres/postgres-sync",
]
tokio-postgres = [
    "postgres",
    "dep:tokio-postgres",
    "dep:bytes",
    "drizzle-core/tokio-postgres",
    "drizzle-postgres/tokio-postgres",
]
# AWS Aurora Data API — toggles emission of `impl TryFrom<&AwsDataApiRow>` and
# `FromDrizzleRow<AwsDataApiRow>` alongside the existing postgres impls.
aws-data-api = [
    "postgres",
    "drizzle-postgres/aws-data-api",
]
# Relational query API code generation
query = []

