[package]
name = "querybuilder"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { workspace = true, optional = true }
libsql = { workspace = true, optional = true }
libsql-rusqlite = { workspace = true, optional = true }
drivers = { workspace = true }
paste = { workspace = true }
const_format = "0.2.32"
uuid = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
procmacros = { path = "../procmacros" }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
drizzle-rs = { workspace = true }

[features]
# Dialect features (for SQL syntax)
sqlite = []
postgres = []
mysql = []

# Utility features
uuid = ["dep:uuid", "drivers/uuid"]
serde_json = ["dep:serde", "dep:serde_json", "drivers/serde_json"]

# Driver-specific features (for type conversions, etc. within querybuilder)
rusqlite = ["dep:rusqlite", "drivers/rusqlite"]
libsql = ["dep:libsql", "drivers/libsql"]
libsql-rusqlite = ["dep:libsql-rusqlite", "drivers/libsql-rusqlite"]
