[package]
name = "drizzle-schema"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Schema metadata and migration types for drizzle-rs"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
uuid = { workspace = true, features = ["v4", "serde"] }
toml = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["std"]
std = []
