[package]
name = "drizzle-seed"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Deterministic database seeding for drizzle-rs"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
drizzle-core = { workspace = true, features = ["std"] }
drizzle-sqlite = { workspace = true, optional = true, features = ["std"] }
drizzle-postgres = { workspace = true, optional = true, features = ["std"] }
rand = { workspace = true }

[features]
default = ["sqlite", "postgres"]

sqlite = ["dep:drizzle-sqlite"]
postgres = ["dep:drizzle-postgres"]

serde = ["postgres", "drizzle-postgres/serde"]
uuid = ["postgres", "drizzle-postgres/uuid"]
chrono = ["postgres", "drizzle-postgres/chrono"]
cidr = ["postgres", "drizzle-postgres/cidr"]
geo-types = ["postgres", "drizzle-postgres/geo-types"]
bit-vec = ["postgres", "drizzle-postgres/bit-vec"]
