[package]
name = "drizzle-seed"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Deterministic database seeding for drizzle-rs"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
drizzle-core = { workspace = true, features = ["std"] }
drizzle-sqlite = { workspace = true, optional = true, features = ["std"] }
drizzle-postgres = { workspace = true, optional = true, features = ["std"] }
rand = { workspace = true }

[features]
# No dialect by default — callers opt into sqlite and/or postgres.
default = []

sqlite = ["dep:drizzle-sqlite"]
postgres = ["dep:drizzle-postgres"]

# Weak forwards: type features must not activate a dialect the caller did not
# request (previously `uuid = ["postgres", ...]` pulled drizzle-postgres into
# sqlite-only builds).
serde = ["drizzle-postgres?/serde", "drizzle-sqlite?/serde"]
uuid = ["drizzle-postgres?/uuid", "drizzle-sqlite?/uuid"]
chrono = ["drizzle-postgres?/chrono", "drizzle-sqlite?/chrono"]
cidr = ["drizzle-postgres?/cidr"]
geo-types = ["drizzle-postgres?/geo-types"]
bit-vec = ["drizzle-postgres?/bit-vec"]
