[package]
name = "drizzle-sqlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
drizzle-core = { workspace = true }
thiserror = { workspace = true }
compact_str = { workspace = true }

rusqlite = { workspace = true, optional = true }
libsql = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true, default-features = false, features = [
  "alloc",
] }
uuid = { workspace = true, optional = true }
arrayvec = { workspace = true, optional = true }
paste = { workspace = true }
turso = { workspace = true, optional = true }
puffin = { workspace = true, optional = true }

[dev-dependencies]
drizzle-macros = { workspace = true, features = ["sqlite"] }


[features]
rusqlite = ["dep:rusqlite", "drizzle-core/rusqlite"]
libsql = ["dep:libsql", "drizzle-core/libsql"]
serde = ["dep:serde_json", "dep:serde", "drizzle-core/serde"]
uuid = ["dep:uuid", "drizzle-core/uuid"]
arrayvec = ["dep:arrayvec"]
turso = ["dep:turso", "drizzle-core/turso"]
profiling = ["dep:puffin", "drizzle-core/profiling"]
