[package]
name = "drizzle-types"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true

[features]
default = ["std"]

# Standard library support (enabled by default)
std = ["serde?/std"]

# Allocator support for no_std environments
alloc = ["serde?/alloc"]

# Feature flags for optional type support
uuid = []
serde = ["dep:serde"]
chrono = []
time = []
geo-types = []
cidr = []
bit-vec = []

# Column count variants (for tuple SQL type markers)
col8 = []
col16 = []
col32 = []
col64 = []
col128 = []
col200 = []

[dependencies]
serde = { workspace = true, optional = true, default-features = false, features = [
    "derive",
] }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }
