[package]
name = "bench-target-rust-pg-orms"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
axum = { version = "0.6.20", default-features = false, features = ["http1", "json", "macros", "query", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.3.8", default-features = false, features = ["postgres", "chrono"] }
pq-sys = { version = "0.7.5", default-features = false, features = ["bundled_without_openssl"] }
postgres = { version = "0.19.12", features = ["with-chrono-0_4"] }
sea-orm = { version = "1.1.20", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "with-chrono", "with-json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "macros"] }
sysinfo = "0.38.3"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
