[package]
name = "spacetime-native-rs"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "spacetime-native-rs"
path = "src/main.rs"

[dependencies]
spacetimedb-sdk = "2.0"
axum = { version = "0.6.20", default-features = false, features = ["http1", "json", "macros", "query", "tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38"
