[workspace]
resolver = "3"

[package]
name = "orm-seaorm"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "seaorm"
path = "src/main.rs"

[dependencies]
sea-orm = { version = ">=1.1, <2", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
